Fixed fade flickering
Using translate caused the images to rerender constantly. Using CSS keyframes reduces the rerendering and therefore removes any visible flickering. margin-left is animated rather than margin-top to avoid any weirdness when scrolling up and down. Actual values should be tweaked further, but this change improves the usability of the website.

--- a/futuredu/src/style/home.css
+++ b/futuredu/src/style/home.css
@@ -13,18 +13,13 @@ a:hover{
     text-decoration: none !important;
 }
 
-.fade-in-section {
-    opacity: 0;
-    transform: translateY(20vh);
-    visibility: hidden;
-    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
-    will-change: opacity, visibility;
+.fade-in-section.is-visible {
+	animation: fadein 1s;
 }
 
-.fade-in-section.is-visible {
-    opacity: 1;
-    transform: none;
-    visibility: visible;
+@keyframes fadein{
+	0% {opacity: 0; margin-left: 60px;}
+	100% {opacity: 100; margin-left: 0px;}
 }
 
 .content{
